# lol-html

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  DEVELOPING.md  LICENSE  README.md  bench.sh  cfsetup.yaml  run_tests.sh  test.sh  trace.sh
.cargo/: config
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  rust.yml
benches/: bench.rs
benches/cases/: mod.rs  parsing.rs  rewriting.rs  selector_matching.rs
c-api/: Cargo.toml  Makefile  build.rs  cbindgen.toml
c-api/c-tests/: Cargo.toml  build.rs
c-api/c-tests/src/: main.rs  test.c  test_comment_api.c  test_element_api.c  test_unsupported_selector.c  test_util.c  tests.h
c-api/cool-thing-c/: Cargo.toml
c-api/cool-thing-c/src/: rewriter_builder.rs
c-api/ctests/: Cargo.toml  build.rs
c-api/ctests/src/: main.rs
c-api/include/: cool_thing.h  lol_html.h
c-api/src/: comment.rs  doctype.rs  document_end.rs  element.rs  errors.rs  lib.rs  main.rs  rewriter.rs  rewriter_builder.rs  selector.rs  streaming.rs  string.rs  text_chunk.rs  utils.rs
c-api/tests/: Cargo.toml  build.rs  test.c
c-api/tests/src/: element_api_test.c  test.c  test_comment_api.c  test_doctype_api.c  test_document_end_api.c  test_element_api.c  test_memory_limiting.c  test_non_ascii_encoding.c  test_text_chunk_api.c  test_unsupported_selector.c  test_util.c  test_util.h  tests.h
examples/: mixed_content_rewriter.rs  parser_trace.rs  selectors_ast.rs  trace.rs
examples/defer_scripts/: README.md  main.rs
examples/mixed_content_rewriter/: README.md  main.rs
fuzz/: .gitignore  Cargo.toml  README.md  build.rs
fuzz/afl/: Cargo.toml
fuzz/afl/src/: main.rs
fuzz/common/: Cargo.toml
fuzz/common/src/: lib.rs
fuzz/dictionaries/: html_tags_1.dict  html_tags_10.dict  html_tags_11.dict  html_tags_12.dict  html_tags_13.dict  html_tags_14.dict  html_tags_15.dict  html_tags_16.dict  html_tags_17.dict  html_tags_18.dict  html_tags_19.dict  html_tags_2.dict  html_tags_20.dict  html_tags_21.dict  html_tags_22.dict  html_tags_23.dict  html_tags_24.dict  html_tags_25.dict  html_tags_26.dict  html_tags_27.dict  html_tags_28.dict  html_tags_29.dict  html_tags_3.dict  html_tags_30.dict  html_tags_4.dict  html_tags_5.dict  html_tags_6.dict  html_tags_7.dict  html_tags_8.dict  html_tags_9.dict
fuzz/fuzz_targets/: fuzz_c_api.rs  fuzz_rewriter.rs
fuzz/hongg/: Cargo.toml
fuzz/hongg/src/: main.rs
fuzz/test_case/: Cargo.toml  build.rs
fuzz/test_case/src/: lib.rs
js-api/: Cargo.toml  Makefile  README.md  test.js
js-api/src/: comment.rs  doctype.rs  document_end.rs  element.rs  end_tag.rs  handlers.rs  html_rewriter.rs  lib.rs  text_chunk.rs
scripts/: bench.sh  c_api_test.sh  ci-cargo-cache.sh  ci-test.sh  fuzz_c_api_with_libfuzzer.sh  fuzz_with_afl.sh  fuzz_with_hongg.sh  fuzz_with_libfuzzer.sh  generate_pkgconfig.sh  parser_trace.sh  precommit.sh  selectors_ast.sh  test.sh
src/: debug_trace.rs  errors.rs  lib.rs  nesting_tracker.rs  tag_name.rs  tag_name_hash.rs  tokenizer.rs  transform_stream.rs  tree_builder_simulator.rs
src/base/: align.rs  alignable.rs  async_closure.rs  buffer.rs  bytes.rs  chunk.rs  cursor.rs  debug_trace.rs  encoding.rs  handler.rs  input.rs  iterable_chunk.rs  mod.rs  range.rs
src/base/mem/: buffer.rs  error.rs  limiter.rs  mod.rs  vec.rs
src/content/: element.rs  mod.rs  token_capturer.rs
src/content/tokens/: attributes.rs  comment.rs  doctype.rs  end_tag.rs  mod.rs  start_tag.rs  text_chunk.rs
src/html/: local_name.rs  local_name_hash.rs  mod.rs  name.rs  namespace.rs  tag.rs  text_type.rs
src/lex_result/: mod.rs
src/lex_unit/: handler.rs  mod.rs  raw_subslice.rs  shallow_token.rs  token.rs
src/lexer/: mod.rs  text_type.rs
src/lexer/feedback_providers/: ambiguity_guard.rs  tree_builder_simulator.rs
src/lexer/outputs/: mod.rs  token_outline.rs  token_view.rs
src/lexer/state_machine/: mod.rs
src/memory/: arena.rs  limited_vec.rs  limiter.rs  mod.rs
src/parser/: mod.rs  tag_name.rs  tag_name_hash.rs  text_type.rs
src/parser/feedback_providers/: ambiguity_guard.rs  tree_builder_simulator.rs
src/parser/lexer/: actions.rs  conditions.rs  mod.rs
src/parser/outputs/: lexeme.rs  mod.rs  tag_hint.rs  tag_name_info.rs  token_outline.rs
src/parser/state_machine/: mod.rs
src/parser/tag_scanner/: actions.rs  conditions.rs  mod.rs
src/rewritable_units/: bail_out.rs  document_end.rs  element.rs  mod.rs  mutations.rs  streaming_sink.rs  text_decoder.rs  text_encoder.rs
src/rewriter/: builder.rs  content_handlers.rs  error.rs  handlers_dispatcher.rs  mod.rs  rewrite_controller.rs  settings.rs
src/rewriting/: mod.rs
src/selectors_vm/: ast.rs  attribute_matcher.rs  compiler.rs  error.rs  match_info.rs  mod.rs  open_element_stack.rs  parse.rs  parser.rs  program.rs  stack.rs  tests.rs
src/token/: capture.rs  capturer.rs  comment.rs  doctype.rs  end_tag.rs  factory.rs  mod.rs  text.rs
src/tokenizer/: buffer.rs  buffer_slice.rs  input_chunk.rs  lex_result_handler.rs  lex_unit.rs  mod.rs  tag_name.rs  tag_name_hash.rs  text_parsing_mode.rs  token.rs  tree_builder_simulator.rs
src/transform_stream/: dispatcher.rs  input_chunk.rs  mod.rs  serialize.rs  token_factory.rs  transform_controller.rs  writer.rs
src/virtual_tree/: mod.rs  open_element_stack.rs  virtual_element.rs
tests/: decoder.rs  integration_tests.rs  main.rs  suite.rs  test_case.rs  test_runner.rs  token.rs  unescape.rs
tests/data/: expected_bailouts.json
tests/fixtures/: attributes.rs  eager_sm_tests.rs  element.rs  element_content_replacement.rs  fatal_errors.rs  full_sm_tests.rs  local_name_hash.rs  mod.rs  rewriter.rs  selector_matching.rs  sm_switch_tests.rs  start_tag.rs  stream.rs  tag_name_hash.rs  tag_name_hash_tests.rs  token_capture.rs  token_capturing.rs  token_capturing_tests.rs  tokenizer_tests.rs
tests/harness/: initial_state.rs  input.rs  io.rs  mod.rs  parse.rs  parsing_result.rs  raw_string_vec.rs  suite.rs  test.rs  test_case.rs  token.rs
tools/parser_trace/: Cargo.toml
tools/selectors_ast/: Cargo.toml
(+1410 files in other folders)
