[package]
name = "cool_thing"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
autotests = false
edition = "2018"

[lib]
doctest = false

[features]
debug_trace = []
integration_test = []

[[test]]
harness = false
name = "integration_tests"

[[bench]]
harness = false
name = "bench"

[dependencies]
bitflags = "1.0.4"
cfg-if = "0.1"
cssparser = "*"
encoding_rs = "0.8.13"
failure = "0.1.3"
lazycell = "1.2"
lazy_static = "1.3.0"
memchr = "2.1.2"
safemem = "0.3.0"
selectors = "0.21.0"

[dev-dependencies]
criterion = "0.2"
getopts = "0.2.15"
glob = "0.2.11"
html5ever = "0.21.0"
lazyhtml = { path = "benches/deps/lazyhtml/rust" }
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"
pre-commit = "0.5.2"
rand = "0.5.5"
rustc-test = "0.3.0"
itertools = "0.6.0"
cargo-fuzz = "0.5.2"

[package.metadata.precommit]
fmt = "bash ./scripts/precommit.sh"
