[package]
name = "cool_thing"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com, ifaaan@gmail.com>"]
license = "BSD-3-Clause"
description = "Streaming HTML rewriter/parser with CSS-selector based API"
repository = "https://github.com/cloudflare/cool-thing"
documentation = "https://docs.rs/cool-thing"
categories = ["parser-implementations", "web-programming"]
keywords = ["html", "css-selectors", "parser", "rewriter", "streaming"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
]
autotests = false
edition = "2018"

[features]
debug_trace = []
integration_test = []
lhtml = []

[[test]]
harness = false
name = "integration_tests"

[[bench]]
harness = false
name = "bench"

[dependencies]
bitflags = "1.0.4"
cfg-if = "0.1"
cssparser = "0.25.5"
encoding_rs = "0.8.13"
lazycell = "1.2"
lazy_static = "1.3.0"
memchr = "2.1.2"
safemem = "0.3.0"
selectors = "0.21.0"
thiserror = "1.0.2"

[dev-dependencies]
criterion = "0.2"
glob = "0.2.11"
html5ever = "0.21.0"
# Cargo doesn't allow packages with path dependencies to be published ¯\_(ツ)_/¯:
# https://github.com/rust-lang/cargo/issues/1565
#
# For now the following line needs to be uncommented to run benchmarks. I hope we'll
# find a better solution soon.
#
# lazyhtml = { path = "benches/deps/lazyhtml/rust", version = "0.1.0" }
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"
pre-commit = "0.5.2"
rand = "0.5.5"
rustc-test = "0.3.0"
itertools = "0.6.0"
cargo-fuzz = "0.5.2"

[package.metadata.precommit]
fmt = "bash ./scripts/precommit.sh"
