[package]
name = "lolhtml"
version = "1.0.1"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>", "Joshua Nelson <jnelson@cloudflare.com>"]
edition = "2021"

publish = false

[dependencies]
encoding_rs = "0.8.13"
lol_html = { path = "../" }
libc = "0"
thiserror = "1"

[build-dependencies]
cc = "1.0.46"

[profile.release]
panic = "abort"
lto = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
