[package]
name = "lolhtml"
version = "1.1.2"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>", "Joshua Nelson <jnelson@cloudflare.com>"]
edition = "2021"
links = "lolhtml"
publish = false

[dependencies]
encoding_rs = "0.8.13"
lol_html = { path = "../" }
libc = "0"
thiserror = "1"

[profile.release]
panic = "abort"
lto = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
