[package]
name = "lol-html"
description = "Streaming HTML rewriter/parser with CSS selector-based API"
license = "BSD-3-Clause"
version = "3.0.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>", "Gus Caplan <me@gus.host>"]
repository = "https://github.com/cloudflare/lol-html"
edition = "2024"
rust-version = "1.89"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.97"
lol_html_native = { package = "lol_html", path = "../", version = "3.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
encoding_rs = "0.8.35"
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0"
wasm-bindgen = "0.2.120"

