[package]
name = "ctests"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2024"
publish = false

[dependencies]
lol_html = { path = "../../" }
lol_html_c_api = { path = "../" }
libc = "0.2.139"

[build-dependencies]
cc = "1.2.27"
glob = "0.3.2"

[profile.release]
panic = "abort"
lto = true
