[package]
name = "cool_thing_c"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2018"

[dependencies]
cool_thing = { path = "../.." }
libc = "0"

[build-dependencies]
cc = "1.0.46"

[profile.release]
panic = "abort"
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]
