[package]
name = "ctests"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
cool_thing = { path = "../.." }
libc = "0"

[build-dependencies]
cool_thing_c = { path = "../cool-thing-c" }
cc = "1.0.46"

[profile.release]
panic = "abort"
lto = true
