[package]
name = "ctests"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
cool_thing = { path = "../../" }
coolthing = { path = "../" }
libc = "0"

[build-dependencies]
cc = "1.0.46"
glob = "0.3.0"

[profile.release]
panic = "abort"
lto = true
