[package]
name = "ctests"
version = "0.1.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
lol_html = { path = "../../" }
lolhtml = { path = "../" }
libc = "0.2.139"

[build-dependencies]
cc = "1.0.46"
glob = "0.3.0"

[profile.release]
panic = "abort"
lto = true
