[package]
name = "test_case"
version = "0.1.0"
authors = ["Yevgen Safronov <yevgen@cloudflare.com>"]
edition = "2021"

publish = false

[dependencies]
lol_html = { path = "../../" }
lolhtml = { path = "../../c-api" }
encoding_rs = "0.8.13"
libc = "0.2.61"
rand = "0.8.4"

[build-dependencies]
bindgen = "0.63.0"
