[package]
name = "test_case"
authors = ["Yevgen Safronov <yevgen@cloudflare.com>"]
edition = "2024"
publish = false

[dependencies]
lol_html = { path = "../../" }
lol_html_c_api = { path = "../../c-api" }
rand = "0.9"
encoding_rs = "0.8.35"
libc = "0.2.174"

[build-dependencies]
bindgen = "0.72.0"

[profile.dev]
opt-level=3
